# advent_of_code_2021

./: README.md  day2_part1.py
day01/: day01_part1.py  day01_part2.py
day02/: day02_part2.py
day03/: CMakeLists.txt  README  day03_part1.py  day03_part2.cpp  day03_part2_functions.cpp  day03_part2_functions.h  test_day03_part1.py  test_day03_part2.cpp
day04/: CMakeLists.txt  README  bingo_board.cpp  bingo_board.h  day04_functions.cpp  day04_functions.h  day04_part1.cpp  random-numbers.txt  test_day04_part1.cpp
